--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@tailwindcss/vite": "^4.0.3",
     "framer-motion": "^12.4.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-router-dom": "^7.1.5",
+    "react-scroll-trigger": "^0.6.14",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
