--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5",
+    "react-scroll": "^1.9.2",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
