--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.3",
     "framer-motion": "^12.4.0",
     "gsap": "^3.12.7",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
