--- a/package.json
+++ b/package.json
@@ -12,16 +12,12 @@
   "dependencies": {
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.3",
-    "framer-motion": "^12.4.0",
+    "framer-motion": "^12.4.2",
     "gsap": "^3.12.7",
-<<<<<<< Updated upstream
-    "locomotive-scroll": "^5.0.0-beta.21",
+    "locomotive-scroll": "^4.1.4",
     "react": "^19.0.0",
-=======
-    "react": "^18.3.1",
->>>>>>> Stashed changes
     "react-countup": "^6.5.3",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5",
@@ -29,6 +25,7 @@
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
