--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.4.2",
     "gsap": "^3.12.7",
     "locomotive-scroll": "^4.1.4",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
